<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:text="@string/text_label_email"
            style="@style/buttonLabelStyle"/>

        <EditText
            android:id="@+id/auth_email_et"
            android:hint="@string/input_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            style="@style/editTextStyle"/>

        <TextView
            android:text="@string/text_label_password"
            style="@style/buttonLabelStyle"/>

        <EditText
            android:id="@+id/auth_pass_et"
            android:hint="@string/input_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            style="@style/editTextStyle"/>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_login"
                android:layout_marginEnd="32dp"
                style="@style/buttonStyle"/>

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_sign_up"
                style="@style/buttonStyle"/>

        </LinearLayout>
    </LinearLayout>
</layout>