<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.shoestore.AuthFragment"
        android:label="@string/fragment_label_auth"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_helloFragment"
            app:destination="@id/helloFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/helloFragment"
        android:name="com.example.shoestore.HelloFragment"
        android:label="@string/fragment_label_welcome"
        tools:layout="@layout/fragment_hello">
        <action
            android:id="@+id/action_helloFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.shoestore.InstructionsFragment"
        android:label="@string/fragment_label_instructions"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/navigation_graph"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.shoestore.ListFragment"
        android:label="@string/fragment_label_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"/>
        <argument
            android:name="shoe"
            app:argType="com.example.shoestore.models.Shoe"
            app:nullable="true"/>
        <action
            android:id="@+id/action_listFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/navigation_graph"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.shoestore.AddFragment"
        android:label="@string/fragment_label_add"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/listFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"/>
    </fragment>
</navigation>